[gd_scene load_steps=5 format=3 uid="uid://ef2t8f3vc5ni"]

[ext_resource type="Texture2D" uid="uid://dwvjt8dm8ywxy" path="res://1/Gemini_Generated_Image_p6vlq5p6vlq5p6vl.png" id="1_40thy"]
[ext_resource type="Script" path="res://GameOver.gd" id="1_hl1lo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ejvti"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kqejw"]
bg_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hl1lo")

[node name="GeminiGeneratedImageP6Vlq5p6Vlq5p6Vl" type="Sprite2D" parent="."]
modulate = Color(0.639216, 0.0509804, 0.137255, 1)
position = Vector2(576, 318.5)
scale = Vector2(1.13086, 0.633789)
texture = ExtResource("1_40thy")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 646.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "\"GAME OVER\""

[node name="CoinsLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_ejvti")
text = "\"В МЕНЮ\""

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_kqejw")
text = "\"Начать заново\""

[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
